add maven registry

--- a/hkube/templates/configmap.yaml
+++ b/hkube/templates/configmap.yaml
@@ -24,6 +24,11 @@ data:
                         "image": "{{ .Values.api_server.image.repository }}"
                   },
                   {
+                        "project": "mvn-registry",
+                        "tag": "{{ index .Values "mvn_registry" "image" "tag" }}",
+                        "image": "{{ .Values.mvn_registry.image.repository }}"
+                  },                  
+                  {
                         "project": "worker",
                         "tag": "{{ index .Values "worker" "image" "tag" }}",
                         "image": "{{ .Values.worker.image.repository }}"
