--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -237,16 +237,15 @@ api_server: # +doc-gen:ignore
     requests:
       cpu: 100m
       memory: 512Mi
-mvn_registry: # +doc-gen:ignore
+artifacts_registry: # +doc-gen:ignore
   env:
-    base_url_path: /hkube/mvn_registry
-    port: '8080'
+    port: '8081'
   image:
-    repository: hkube/maven-registry
+    repository: hkube/artifacts-registry
     tag: v2.0.0
   ingress:
     enabled: true
-    path: /hkube/mvn_registry
+    path: /hkube/artifacts-registry
   service:
     type: ClusterIP
   resources:
