--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -239,7 +239,8 @@ api_server: # +doc-gen:ignore
       memory: 512Mi
 artifacts_registry: # +doc-gen:ignore
   env:
-    port: '8081'
+    port: '8081',
+    context: hkube/artifacts-registry
   image:
     repository: hkube/artifacts-registry
     tag: v2.0.0
