--- a/hkube/templates/configmaps/artifacts-registry-cm.yaml
+++ b/hkube/templates/configmaps/artifacts-registry-cm.yaml
@@ -1,9 +1,11 @@
 ---
+{{- $path := .Values.artifacts_registry.ingress.path |trimAll "/"}}
+{{- $prefix := .Values.global.ingress.prefix |trimAll "/" }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: artifacts-registry-configmap
 data:
-  NEXUS_CONTEXT:  {{ .Values.global.ingress.prefix }}{{index .Values "artifacts_registry" "ingress" "path" |trimPrefix "/" | quote}}
-  PORT: {{index .Values "artifacts_registry" "env" "port" | quote}}
+  NEXUS_CONTEXT: {{ printf "%s/%s" $prefix $path | trimPrefix "/" | quote}}
+  PORT: {{ .Values.artifacts_registry.env.port | quote}}
 
