--- a/hkube/requirements.yaml
+++ b/hkube/requirements.yaml
@@ -23,3 +23,7 @@ dependencies:
     version: "5.0.1024"
     repository: "http://hkube.io/helm/"
     condition: minio.enable
+  - name: mongodb
+    version: "10.0.1000"
+    repository: "http://hkube.io/helm/"
+    condition: mongodb.enable
