--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -297,7 +297,8 @@ delete_deployment_and_jobs: # +doc-gen:ignore
 etcd_cleaner: # +doc-gen:ignore
   pattern: 0 0 * * *
   env:
-    object_expiration_days: '5'
+    etcd_expiration_days: "1"
+    redis_expiration_days: "5"
   image:
     repository: hkube/etcd-cleaner
     tag: v2.0.3
