--- a/hkube/templates/algorithm-operator-deployment.yaml
+++ b/hkube/templates/algorithm-operator-deployment.yaml
@@ -142,4 +142,20 @@ spec:
                   name: s3-secret
                   key: awsEndpointUrl
 {{- end }}              
-
+{{- if .Values.mongodb.enable }}
+            - name: MONGODB_SERVICE_USER_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-username
+            - name: MONGODB_SERVICE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-password
+            - name: MONGODB_DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-database
+{{- end }}
