--- a/hkube/templates/task-executor-deployment.yaml
+++ b/hkube/templates/task-executor-deployment.yaml
@@ -129,4 +129,21 @@ spec:
             - name: DEFAULT_QUOTA_MEM
               value: {{ .Values.task_executor.env.default_quota_mem | quote}}
             - name: DEFAULT_QUOTA_GPU
-              value: {{ .Values.task_executor.env.default_quota_gpu | quote}}             
+              value: {{ .Values.task_executor.env.default_quota_gpu | quote}}
+{{- if .Values.mongodb.enable }}
+            - name: MONGODB_SERVICE_USER_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-username
+            - name: MONGODB_SERVICE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-password
+            - name: MONGODB_DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-database
+{{- end }}              
