fix mongo username

--- a/hkube/templates/configmaps/mongodb-secret.yaml
+++ b/hkube/templates/configmaps/mongodb-secret.yaml
@@ -9,8 +9,7 @@ metadata:
     core: "true"
 type: Opaque
 data:
-  mongodb-root-password:  {{ .Values.mongodb.auth.rootPassword | b64enc | quote }}
-  mongodb-password:  {{ .Values.mongodb.auth.password | b64enc | quote }}
-  mongodb-username:  {{ .Values.mongodb.auth.username | b64enc | quote }}
-  mongodb-database:  {{ .Values.mongodb.auth.database | b64enc | quote }}
+  mongodb-password:  {{ .Values.mongodb.auth.rootPassword | b64enc | quote }}
+  mongodb-username:  {{ .Values.mongodb.auth.user_name | b64enc | quote }}
+  mongodb-database:  {{ .Values.mongodb.auth.databaseName | b64enc | quote }}
 {{- end }}
