--- a/hkube/requirements.yaml
+++ b/hkube/requirements.yaml
@@ -23,3 +23,7 @@ dependencies:
     version: "5.0.1024"
     repository: "http://hkube.io/helm/"
     condition: minio.enable
+  - name: gitea
+    version: "2.1.3000"
+    repository: "http://hkube.io/helm/"
+    condition: gitea.enable    
