--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -133,6 +133,16 @@ minio:
     storageClass: ''
   serviceAccount: # +doc-gen:ignore
     create: false
+gitea:
+  enable: true
+  config:
+    repository:
+      ENABLE_PUSH_CREATE_USER: true
+  admin:
+    username: hkube
+    password: 123456
+    email: "hkube@hkube.io"
+
 metrics:
   serviceMonitorSelector:
     release: metrics
