--- a/dev/index.yaml
+++ b/dev/index.yaml
@@ -1918,7 +1918,7 @@ entries:
     - hkube-v2.0.1.tgz
     version: v2.0.1
   - apiVersion: v1
-    appVersion: 1.3.154
+    appVersion: v1.3.154
     created: "2021-01-05T17:16:23.501331+02:00"
     dependencies:
     - condition: etcd.enable
@@ -1961,8 +1961,8 @@ entries:
     sources:
     - https://github.com/kube-HPC
     urls:
-    - hkube-1.3.154.tgz
-    version: 1.3.154
+    - hkube-v1.3.154.tgz
+    version: v1.3.154
   - apiVersion: v1
     appVersion: v1.3.147
     created: "2020-10-20T13:04:20.347385601Z"
