--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -138,7 +138,7 @@ metrics:
     release: metrics
   grafanaDashboardLabel:
     grafana_dashboard: '1'
-systemversion: 1.3.154
+systemversion: v1.3.154
 build_secret:
 # docker registry for algorithm builds. defaults to docker.io
   docker_registry: ''
