--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -131,6 +131,10 @@ mongodb:
     rootPassword: ehtyTJj4mR
     user_name: root
     databaseName: hkube
+  podSecurityContext:
+    enabled: false
+  containerSecurityContext:
+    enabled: false
 minio:
   enable: true
   accessKey: hkubeminiokey
@@ -150,6 +154,14 @@ gitea:
       username: hkube
       password: 123456
       email: "hkube@hkube.io"
+  postgresql:
+    securityContext:
+      enabled: false
+    containerSecurityContext:
+      enabled: false
+  memcached:
+    securityContext:
+      enabled: false
 
 metrics:
   serviceMonitorSelector:
