--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -267,6 +267,23 @@ api_server: # +doc-gen:ignore
     requests:
       cpu: 100m
       memory: 512Mi
+datasource_service: # +doc-gen:ignore
+  env:
+    base_url_path: /hkube/datasource-service
+    metric_port: '3001'
+    port: '3005'
+  image:
+    repository: hkube/datasource-service
+    tag: v2.0.0
+  ingress:
+    enabled: true
+    path: /hkube/datasource-service
+  service:
+    type: ClusterIP
+  resources:
+    requests:
+      cpu: 100m
+      memory: 512Mi
 artifacts_registry: # +doc-gen:ignore
   env:
     port: '8081'
@@ -346,7 +363,7 @@ monitor_server: # +doc-gen:ignore
     timeoutSeconds: 1
     failureThreshold: 3
   env:
-    metric_port: 30010
+    port: 30010
     log_external_requests: false
     elasticsearch_service_url: ''
     elasticsearch_logs_index: 'logstash-*'
@@ -360,6 +377,7 @@ monitor_server: # +doc-gen:ignore
   ingress:
     enabled: true
     path: /hkube/monitor-server
+    datasource_proxy_path: /hkube/monitor-server/datasource
   service:
     type: ClusterIP
   resources:
