fix datasource-service to datasources-service

--- a/hkube/templates/datasources-service-deployment.yaml
+++ b/hkube/templates/datasources-service-deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: datasource-service
+  name: datasources-service
   labels:
-    app: datasource-service
+    app: datasources-service
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
     group: {{ .Values.labels.group.value }}
@@ -12,15 +12,15 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: datasource-service
-      release: datasource-service
+      app: datasources-service
+      release: datasources-service
   template:
     metadata:
       annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/configmaps/datasource-service-cm.yaml") . | sha256sum }}
+        checksum/config: {{ include (print $.Template.BasePath "/configmaps/datasources-service-cm.yaml") . | sha256sum }}
       labels:
-        app: datasource-service
-        release: datasource-service
+        app: datasources-service
+        release: datasources-service
         group: {{ .Values.labels.group.value }}
     spec:
 {{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
@@ -34,13 +34,15 @@ spec:
       volumes:
         - name: uploads
           emptyDir: {}
+        - name: temp
+          emptyDir: {}
 {{- if eq .Values.env.default_storage "fs" }}
         - name: storage-volume
           persistentVolumeClaim:
             claimName: hkube-storage-pvc
 {{- end }}                                    
       containers:
-        - name: datasource-service
+        - name: datasources-service
           image: "{{ .Values.global.registry }}{{ .Values.datasources_service.image.repository }}:{{ .Values.datasources_service.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
 {{- if .Values.global.resources_enable }}          
@@ -51,9 +53,9 @@ spec:
 {{- end }}
           volumeMounts:
             - name: uploads
-              mountPath: /hkube/datasource-service/uploads
+              mountPath: /hkube/datasources-service/uploads
             - name: temp
-              mountPath: /hkube/datasource-service/temp
+              mountPath: /hkube/datasources-service/temp
 {{- if eq .Values.env.default_storage "fs" }}
             - name: storage-volume
               mountPath: {{ .Values.global.storage.fs.base_directory | quote}}
@@ -67,28 +69,28 @@ spec:
             - name: METRICS_PORT
               valueFrom:
                 configMapKeyRef:
-                  name: datasource-service-configmap
+                  name: datasources-service-configmap
                   key: METRICS_PORT
             - name: DATASET_SERVICE_REST_PORT
               valueFrom:
                 configMapKeyRef:
-                  name: datasource-service-configmap
+                  name: datasources-service-configmap
                   key: PORT
             - name: NODE_ENV
               valueFrom:
                 configMapKeyRef:
-                  name: datasource-service-configmap
+                  name: datasources-service-configmap
                   key: NODE_ENV
             - name: BASE_URL_PATH
               valueFrom:
                 configMapKeyRef:
-                  name: datasource-service-configmap
+                  name: datasources-service-configmap
                   key: BASE_URL_PATH
 {{- if eq .Values.env.default_storage "fs" }}
             - name: BASE_FS_ADAPTER_DIRECTORY
               valueFrom:
                 configMapKeyRef:
-                  name: datasource-service-configmap
+                  name: datasources-service-configmap
                   key: BASE_FS_ADAPTER_DIRECTORY
 {{- else if eq .Values.env.default_storage "s3" }}
             - name: AWS_ACCESS_KEY_ID
@@ -110,17 +112,17 @@ spec:
             - name: DEFAULT_STORAGE
               valueFrom:
                 configMapKeyRef:
-                  name: datasource-service-configmap
+                  name: datasources-service-configmap
                   key: DEFAULT_STORAGE
             - name: STORAGE_ENCODING
               valueFrom:
                 configMapKeyRef:
-                  name: datasource-service-configmap
+                  name: datasources-service-configmap
                   key: STORAGE_ENCODING                  
             - name: CLUSTER_NAME
               valueFrom:
                 configMapKeyRef:
-                  name: datasource-service-configmap
+                  name: datasources-service-configmap
                   key: CLUSTER_NAME
 {{- if .Values.global.isPrivileged }}            
             - name: JAEGER_AGENT_SERVICE_HOST
@@ -138,7 +140,7 @@ spec:
             - name: INGRESS_PREFIX
               valueFrom:
                 configMapKeyRef:
-                  name: datasource-service-configmap
+                  name: datasources-service-configmap
                   key: INGRESS_PREFIX
 {{- if .Values.mongodb.enable }}
             - name: MONGODB_SERVICE_USER_NAME
