--- a/hkube/templates/datasources-service-ingress.yaml
+++ b/hkube/templates/datasources-service-ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.datasources_service.ingress.enabled -}}
-{{- $fullName := "datasource-service" -}}
+{{- $fullName := "datasources-service" -}}
 {{- $servicePort := .Values.datasources_service.env.port -}}
 {{- $ingressPath := .Values.datasources_service.ingress.path -}}
 {{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1beta1" }}
@@ -9,7 +9,7 @@ apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
-  name: datasource-service
+  name: datasources-service
   annotations:
 {{- if .Values.global.ingress.use_regex }}
     nginx.ingress.kubernetes.io/rewrite-target: /$2
@@ -22,7 +22,7 @@ metadata:
     kubernetes.io/tls-acme: "true"
 {{- end }}    
   labels:
-    app: datasource-service
+    app: datasources-service
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
     group: {{ .Values.labels.group.value }}
