--- a/hkube/templates/datasources-service-service.yaml
+++ b/hkube/templates/datasources-service-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: datasource-service
+  name: datasources-service
   annotations:
     prometheus.io/scrape: "true"
   labels:
-    app: datasource-service
+    app: datasources-service
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
     group: {{ .Values.labels.group.value }}
@@ -23,5 +23,5 @@ spec:
       name: metric
     
   selector:
-    app: datasource-service
-    release: datasource-service
+    app: datasources-service
+    release: datasources-service
