--- a/hkube/templates/monitor-server-service.yaml
+++ b/hkube/templates/monitor-server-service.yaml
@@ -11,5 +11,5 @@ spec:
     app: monitor-server
   ports:
     - protocol: TCP
-      port: {{ index .Values "monitor_server" "env" "metric_port" }}
-      targetPort: {{ index .Values "monitor_server" "env" "metric_port" }}
+      port: {{ .Values.monitor_server.env.port }}
+      targetPort: {{ .Values.monitor_server.env.port }}
