--- a/hkube/templates/datasources-service-deployment.yaml
+++ b/hkube/templates/datasources-service-deployment.yaml
@@ -158,4 +158,6 @@ spec:
                 secretKeyRef:
                   name: mongodb-secret
                   key: mongodb-database
+            - name: GIT_ENDPOINT_URL
+              value: gitea-http:{{ .Values.gitea.service.http.port }}
 {{- end }}
